<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.activities.MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/main_activity_title"
        android:textStyle="bold"
        android:textSize="@dimen/main_activity_title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/main_content_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/main_content_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/main_activity_search_by_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_activity_search_by_radio_group_margin_top"
            android:layout_marginBottom="@dimen/main_activity_search_by_radio_group_margin_bottom">

            <RadioButton
                android:id="@+id/main_activity_search_by_name_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_by_name_radio_text"/>

            <RadioButton
                android:id="@+id/main_activity_search_by_filter_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_by_filter_radio_text"/>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/main_content_search_by_name_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_search_text_description"
                android:layout_margin="@dimen/main_activity_title_margin"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/main_search_by_name_edittext"
                style="@style/EditText.Search"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_content_search_by_filter_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/main_activity_filter_sort_by_group"
                style="@style/SpinnerGroup.Horizontal">

                <TextView
                    style="@style/SpinnerDescription"
                    android:text="@string/sort_by_description"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/main_activity_filter_sort_by_dropdown"
                    style="@style/Spinner"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_activity_filter_filter_by_group"
                style="@style/SpinnerGroup.Horizontal">

                <TextView
                    style="@style/SpinnerDescription"
                    android:text="@string/filter_by_description"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/main_activity_filter_filter_by_dropdown"
                    style="@style/Spinner"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/main_activity_spinner_description_min_limit"
                    style="@style/SpinnerDescription"
                    android:text="@string/min_limit_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/main_activity_filter_min_limit_dropdown"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/main_activity_filter_min_limit_dropdown"
                    style="@style/Spinner"
                    android:layout_width="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/main_activity_spinner_description_min_limit"
                    app:layout_constraintRight_toRightOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/main_activity_filter_min_limit_edittext"
                    style="@style/EditText.Search"
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:hint="25%"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    app:layout_constraintTop_toBottomOf="@+id/main_activity_filter_min_limit_dropdown"
                    app:layout_constraintLeft_toLeftOf="@+id/main_activity_filter_min_limit_dropdown"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/main_activity_filter_result_count_group"
                style="@style/SpinnerGroup.Horizontal">

                <TextView
                    style="@style/SpinnerDescription"
                    android:text="@string/result_count"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/main_activity_filter_result_count_edittext"
                    style="@style/EditText.Search"
                    android:textAlignment="center"
                    android:hint="50"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/main_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/main_content_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/search"/>

</androidx.constraintlayout.widget.ConstraintLayout>